Update app with various improvements and fixes
- Add missing env variables to env.example
- Update verified projects admin UI and API
- Improve price chart and signals form components
- Refine routes for index, profile, and API endpoints

--- a/env.example
+++ b/env.example
@@ -10,3 +10,6 @@ COINGECKO_API_KEY=your_coingecko_api_key_here
 
 # Neon Database Connection
 DATABASE_URL=postgresql://username:password@hostname:5432/database_name?sslmode=require
+
+# Admin password protection
+ADMIN_PASSWORD=your_secure_admin_password_here
