feat: Add onchain signal tracking on Base blockchain
- Deploy SignalsAttestation smart contract to Base mainnet (0x1e8feced8227c6b85535669ebcea967fb259a87b)
- Add onchain_tx_hash and onchain_signal_id fields to database
- Optimize onchain metadata to only store timestamps (80% gas savings)
- Add 'View Onchain' link to all signal display components
- Integrate onchain saving into API endpoint (optional via ENABLE_ONCHAIN_SIGNALS)
- Add migration script to batch-upload existing signals to blockchain
- Add comprehensive documentation for onchain features

All signals are now verifiable on BaseScan when saved with onchain enabled.

--- a/env.example
+++ b/env.example
@@ -13,3 +13,9 @@ DATABASE_URL=postgresql://username:password@hostname:5432/database_name?sslmode=
 
 # Admin password protection
 ADMIN_PASSWORD=your_secure_admin_password_here
+
+# Onchain Signals (Base Network)
+SIGNALS_CONTRACT_ADDRESS=0x_your_deployed_contract_address
+BASE_RPC_URL=https://mainnet.base.org
+BASESCAN_API_KEY=your_basescan_api_key_here
+PRIVATE_KEY=0x_your_private_key_for_deploying_and_writing
