--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,21 +1,33 @@
 {
   "manifest_version": 3,
   "name": "Signals - Trading Signal Tracker",
-  "version": "1.0.0",
+  "version": "1.3.0",
   "description": "Track bullish and bearish trading signals on X.com with Ethos Network accountability",
   "permissions": [
     "activeTab",
-    "storage"
+    "storage",
+    "alarms",
+    "scripting"
   ],
   "host_permissions": [
     "https://x.com/*",
-    "https://twitter.com/*"
+    "https://twitter.com/*",
+    "https://signals.deno.dev/*",
+    "http://localhost:8000/*"
   ],
+  "background": {
+    "service_worker": "background.js"
+  },
   "content_scripts": [
     {
       "matches": ["https://x.com/*", "https://twitter.com/*"],
       "js": ["content.js"],
       "css": ["content.css"],
+      "run_at": "document_idle"
+    },
+    {
+      "matches": ["https://signals.deno.dev/extension-auth*", "http://localhost:8000/extension-auth*"],
+      "js": ["auth-bridge.js"],
       "run_at": "document_idle"
     }
   ],
@@ -25,8 +37,8 @@
   },
   "web_accessible_resources": [
     {
-      "resources": ["popup.html", "content.css"],
-      "matches": ["https://x.com/*", "https://twitter.com/*"]
+      "resources": ["popup.html", "content.css", "wallet-connect.js", "onboarding.html"],
+      "matches": ["https://x.com/*", "https://twitter.com/*", "<all_urls>"]
     }
   ]
 }
