--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Signals - Trading Signal Tracker",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "Track bullish and bearish trading signals on X.com with Ethos Network accountability",
   "permissions": [
     "activeTab",
@@ -12,8 +12,7 @@
   "host_permissions": [
     "https://x.com/*",
     "https://twitter.com/*",
-    "https://signals.deno.dev/*",
-    "http://localhost:8000/*"
+    "https://signals.deno.dev/*"
   ],
   "background": {
     "service_worker": "background.js"
@@ -26,7 +25,7 @@
       "run_at": "document_idle"
     },
     {
-      "matches": ["https://signals.deno.dev/extension-auth*", "http://localhost:8000/extension-auth*"],
+      "matches": ["https://signals.deno.dev/extension-auth*"],
       "js": ["auth-bridge.js"],
       "run_at": "document_idle"
     }
